# READY7

./: CMakeLists.txt
include/: header.h
sources/: main.cpp  source.cpp
